--- a/nextjs/nextjs-dashboard/.vscode/settings.json
+++ b/nextjs/nextjs-dashboard/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib",
   "files.associations": {
     "*.css": "tailwindcss"
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "[typescript]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "always"
+    }
+  },
+  "[typescriptreact]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "always"
+    }
   }
 }
