--- a/nextjs/nextjs-dashboard/.vscode/settings.json
+++ b/nextjs/nextjs-dashboard/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
+  "editor.formatOnSave": true,
   "files.associations": {
     "*.css": "tailwindcss"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "[typescript]": {
     "editor.codeActionsOnSave": {
-      "source.organizeImports": "always"
+      "source.organizeImports": "always",
     }
   },
   "[typescriptreact]": {
